--- a/new.html
+++ b/new.html
@@ -115,7 +115,5 @@
     </div>
 
     
-    <img src="https://i.imgur.com/tvg7reH.jpg" class="photo" alt="Image of Love">
-
-</body>
+    <img src="mylove.jpg.jpg"
 </html>
