--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -16,8 +16,9 @@
              Я хотел поздравить тебя <br />
              с 14 февраля, <br />
              я не знал как красиво сделать <br />
-             этот мини подарк <br />
-             и придумал такое) (Сделал с помошю ютуба ххах) <br />
+             этот мини подарoк <br />
+             и придумал такое) (Сделал с помощю ютуба ххах) <br />
+             надеюсь тебе понравится только скажешь честно 💋 <br />
           </p>
           <a href="new.html"> Жмякай</a>
         </div>
@@ -30,4 +31,4 @@
       </div>
     </div>
   </body>
-</html>
+</html>>
