--- a/index.html
+++ b/index.html
@@ -13,12 +13,12 @@
         <div class="heart"></div>
         <div class="text">
           <p>
-             Я хотел поздравить тебя <br />
-             с 14 февраля, <br />
-             я не знал как красиво сделать <br />
-             этот мини подарoк <br />
-             и придумал такое) (Сделал с помощю ютуба ххах) <br />
-             надеюсь тебе понравится только скажешь честно 💋 <br />
+            Ты знаешь, как сильно я люблю Тебя? <br>
+             Это чувство невозможно описать словами. <br>
+              Каждый раз, когда я вижу тебя, моё сердце бьётся чаще,<br>
+               и я чувствую себя счастливым. <br>
+                    Заика💋, ты - моя всё,<br>
+                   Я больше ничего интересного не придумал так что жмякай ниже💋💋
           </p>
           <a href="new.html"> Жмякай</a>
         </div>
@@ -31,4 +31,4 @@
       </div>
     </div>
   </body>
-</html>>
+</html>
